src/snapshots/noatun__message_store__tests__add_and_delete_messages.snap
---
source: src/message_store.rs
expression: test_recorder.get_metrics()
---
Key(index_compaction_count): 1
Key(messages_written): 6
Key(message_bytes_written): 168
Key(index_size): 0
Key(index_holes): 0
