src/snapshots/noatun__message_store__tests__add_and_read_messages_twice.snap
---
source: src/message_store.rs
expression: test_recorder.get_metrics_text()
---
Key(index_compaction_count): 0
Key(messages_written): 10
Key(message_bytes_written): 280
Key(store0): 4096
Key(store1): 4096
Key(index_file): 4096
Key(index_size): 10
Key(index_holes): 0
Key(data_frag0): 0
Key(data_frag1): 0
